[package]
name = "tokio_uds-test"
version = "0.1.0"
authors = ["Naja Melan <najamelan@autistici.org>"]
edition = "2018"


[[bin]]

	name = "peera"
	path = "src/peera.rs"


[[bin]]

	name = "peerb"
	path = "src/peerb.rs"


[[bin]]

	name = "peerc"
	path = "src/peerc.rs"


[lib]

	name = "libpeers"
	path = "src/libpeers/libpeers.rs"


[dependencies]

	actix       = ">= 0.7.9"
	# bytes       = "0.4.11"
	failure     = "*"
	tokio       = { version = "0.1.15", features = ["async-await-preview"] }
	tokio-codec = "0.1.1"
	tokio-uds   = "*"

	tokio-serde-cbor = "0.3.1"
	serde            = "1.0.87"
	serde_derive     = "1.0.87"

	# Only needs to be explicitly imported if you want to make use of
	# the machinery to convert promises back and forth between 0.1 and 0.3
	# (which is built into the provided await! macro only otherwise):
	#
	tokio-async-await = "0.1.5"


[dependencies.futures-core-preview]

	default-features = false
	version          = "0.3.0-alpha.12"


[dependencies.futures-util-preview]

	default-features = false
	features         = ["tokio-compat"]
	version          = "0.3.0-alpha.12"
